--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-7" href="index.html#features2-u">La Solution ?</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="index.html#features11-m">Partenaire</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                <li class="nav-item">
+                    <a class="nav-link link text-primary display-7" href="index.html#features2-u">La Solution ?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link text-primary display-7" href="index.html#features11-m">Partenaire</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-primary display-7" href="index.html#forms1-y">Demander une Demo</a>
                 </li>
@@ -78,8 +84,6 @@
             <div class="col-md-12 col-lg-12 wrapper-left">
                 <h3 class="mbr-section-subtitle mbr-white align-left mbr-fonts-style display-7"><span>Faire du sport en s'amusant</span></h3>
                 <h1 class="mbr-section-title mbr-fonts-style align-left display-1">Morning Star</h1>
-                <p class="mbr-text pb-3 mbr-fonts-style display-7"></p>
-                
             </div>
         </div>
     </div>
@@ -94,7 +98,6 @@
         <div class="container d-flex justify-content-center">
             <div class="mbr-white col-12 align-center">
                 <h2 class="mbr-section-title mbr-fonts-style line-bg-warning display-2">Solution Morning Star</h2>
-                <p class="text-top mbr-fonts-style display-7"></p>
             </div>
         </div>
         <div class="row">
