--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; object-src 'none'"> -->
   
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <!-- <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css"> -->
+  <!-- <link rel="stylesheet" href="assets/tether/tether.min.css"> -->
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
-  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
+  <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css"> -->
+  <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css"> -->
+  <!-- <link rel="stylesheet" href="assets/dropdown/css/style.css"> -->
+  <!-- <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css"> -->
+  <!-- <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css"> -->
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/recaptcha.css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <!-- <link rel="stylesheet" href="assets/recaptcha.css"> -->
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
 </head>
 <body>
